# iter-ation

./: .gitignore  README.md  generate_long_pulse_tokamak_dataset.py  generate_trace.py  play_trace.py  pyproject.toml  scenario_trace.json  scenario_trace_s1.json  scenario_trace_s2.json  scenario_trace_s3.json  scenario_trace_s4.json
docs/superpowers/plans/: 2026-03-14-disruption-monitor.md
docs/superpowers/specs/: 2026-03-14-disruption-monitor-design.md  2026-03-14-gemini-agent-design.md
src/: main.py
src/agent/: iter_agent.py
src/iter_ation/: __main__.py  cli.py
src/iter_ation/agent/: gemini_client.py  operator_ai.py
src/iter_ation/generator/: correlations.py  disruption.py  engine.py  noise.py  plasma_state.py
src/iter_ation/monitoring/: alerts.py  operator.py  thresholds.py
src/iter_ation/physics/: constants.py  formulas.py  parameters.py  profiles.py
src/iter_ation/tui/: app.py  dashboard.py  theme.py
src/iter_ation/tui/widgets/: ai_panel.py  alert_log.py  controls.py  gauge.py  param_section.py  plasma_profile.py  profile_plot.py  timeline.py
src/physics/: models.py
src/simulation/: generator.py
src/ui/: app.py  components.py
tests/: conftest.py
tests/test_generator/: test_correlations.py  test_disruption.py  test_engine.py  test_noise.py  test_plasma_state.py
tests/test_monitoring/: test_alerts.py  test_operator.py  test_thresholds.py
tests/test_physics/: test_constants.py  test_formulas.py  test_parameters.py  test_profiles.py
